--- a/_gulp/_scss/2-layout/_header.scss
+++ b/_gulp/_scss/2-layout/_header.scss
@@ -103,7 +103,6 @@
     }
     &__address {
       width: calc(100% - 214px);
-      font-size: rem(16px);
       p {
         line-height: 1.5;
       }
@@ -173,7 +172,7 @@
       padding-left: 20px;
     }
     &__phones {
-      font-size: rem(20px);
+      font-size: rem(18px);
       display: flex;
       &>div {
         &+div {
@@ -245,6 +244,14 @@
     }
     &__social {
       padding-top: 0;
+      a {
+        width: 38px;
+        height: 38px;
+      }
+      img {
+        width: 38px;
+        height: 38px;
+      }
     }
     &__bottom, &__center {
       width: auto;
@@ -260,7 +267,7 @@
       margin: 0;
     }
     &-holder {
-      height: 212px;
+      height: 202px;
     }
     &.is-scroll {
       padding-top: 5px;
@@ -277,12 +284,28 @@
         &__address, &__social, &__btn {
           display: block;
         }
+        &__address {
+          font-size: rem(12px);
+        }
         &__phones {
           padding-left: 0;
+          font-size: rem(16px);
         }
         &__wrapper {
           margin-bottom: 5px;
         }
+        &__btn {
+          height: 50px;
+          line-height: 50px;
+        }
+      }
+      .navigation__wrapper {
+        height: 50px;
+      }
+      .navigation__wrapper nav ul li>a, .navigation__wrapper nav ul li>span {
+        height: 50px;
+        line-height: 50px;
+        font-size: rem(15px);
       }
     }
   }
