--- a/_gulp/_scss/2-layout/_header.scss
+++ b/_gulp/_scss/2-layout/_header.scss
@@ -32,6 +32,7 @@
     align-items: center;
     max-width: 320px;
     margin: 0 auto 18px;
+    flex-grow: 1;
   }
   &__logo {
     flex-shrink: 0;
