--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -4151,12 +4151,12 @@
   &__block {
     background: $add-color;
     padding: 10px 10px 27px 10px;
-    font-size: rem(18px);
+    font-size: rem(14px);
     position: relative;
     width: 280px;
     margin: 0 auto;
     p {
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
     &-more {
       display: block;
@@ -5035,7 +5035,7 @@
   }
   &__content {
     margin-left: -24px;
-    font-size: rem(20px);
+    font-size: rem(16px);
     position: relative;
     z-index: 5;
   }
@@ -5126,6 +5126,7 @@
     }
     &__content {
       margin-left: 0;
+      font-size: rem(18px);
     }
     &__btn {
       margin: 0;
@@ -5169,6 +5170,9 @@
         left: -35px;
         bottom: -29px;
       }
+    }
+    &__content {
+      font-size: rem(20px);
     }
   }
 }
@@ -5362,6 +5366,36 @@
     }
     &__container {
       max-width: 940px;
+    }
+  }
+  @include media-breakpoint-up(xl) {
+    &::before {
+      top: 73px;
+      bottom: 110px;
+    }
+    &__container {
+      max-width: 1160px;
+    }
+    &__block {
+      &-content {
+        top: 0;
+        h1, .h1 {
+          font-size: rem(45px);
+          max-width: 566px;
+        }
+      }
+    }
+    &__bg {
+      &.--bg1 {
+        top: -20px;
+      }
+      &.--bg2 {
+        width: 284px;
+        height: 251px;
+        background-size: 284px 251px;
+        left: 685px;
+        bottom: -47px;
+      }
     }
   }
   @include media-breakpoint-up(xxl) {
