--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -177,30 +177,54 @@ html(lang="ru")
                 img(src="./images/icon-social-4.svg", alt="")
         .view__bottom
           .container-fluid
-            .view__carousel
+            .view__carousel.gallery
               div
                 .view__block
-                  a(href="#!")
+                  a(href="./tmp/view-img-1.png").gallery-item
                     img(src="./tmp/view-img-1.png", alt="")
               div
                 .view__block
-                  a(href="#!")
+                  a(href="./tmp/view-img-2.png").gallery-item
                     img(src="./tmp/view-img-2.png", alt="")
               div
                 .view__block
-                  a(href="#!")
+                  a(href="./tmp/view-img-3.png").gallery-item
                     img(src="./tmp/view-img-3.png", alt="")
               div
                 .view__block
-                  a(href="#!")
+                  a(href="./tmp/view-img-4.png").gallery-item
                     img(src="./tmp/view-img-4.png", alt="")
               div
                 .view__block
-                  a(href="#!")
+                  a(href="./tmp/view-img-1.png").gallery-item
                     img(src="./tmp/view-img-1.png", alt="")
               div
                 .view__block
-                  a(href="#!")
+                  a(href="./tmp/view-img-2.png").gallery-item
+                    img(src="./tmp/view-img-2.png", alt="")
+              div
+                .view__block
+                  a(href="./tmp/view-img-1.png").gallery-item
+                    img(src="./tmp/view-img-1.png", alt="")
+              div
+                .view__block
+                  a(href="./tmp/view-img-2.png").gallery-item
+                    img(src="./tmp/view-img-2.png", alt="")
+              div
+                .view__block
+                  a(href="./tmp/view-img-3.png").gallery-item
+                    img(src="./tmp/view-img-3.png", alt="")
+              div
+                .view__block
+                  a(href="./tmp/view-img-4.png").gallery-item
+                    img(src="./tmp/view-img-4.png", alt="")
+              div
+                .view__block
+                  a(href="./tmp/view-img-1.png").gallery-item
+                    img(src="./tmp/view-img-1.png", alt="")
+              div
+                .view__block
+                  a(href="./tmp/view-img-2.png").gallery-item
                     img(src="./tmp/view-img-2.png", alt="")
 
       // Popular
