--- a/_gulp/_scss/2-layout/_menu.scss
+++ b/_gulp/_scss/2-layout/_menu.scss
@@ -151,6 +151,7 @@
     display: block;
     background: rgba(241, 225, 213, 0.42);
     position: relative;
+    border-top: 1px solid rgba(200, 200, 200, 0.5);
     &__contacts, &__close {
       display: none;
     }
