--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -3883,11 +3883,20 @@
     width: 290px;
     height: 290px;
     margin: 0 auto;
+    position: relative;
+    overflow: hidden;
     img {
       display: block;
       width: 290px;
       height: 290px;
       object-fit: contain;
+      transform: scale(1);
+      transition: all 0.35s;
+    }
+    &:hover {
+      img {
+        transform: scale(1.2);
+      }
     }
   }
   &__social {
@@ -3921,6 +3930,7 @@
     }
   }
   &__carousel {
+    width: 100%;
     .slick-arrow {
       bottom: -50px;
       top: auto;
@@ -3928,6 +3938,7 @@
       font-size: 0;
       width: auto;
       height: auto;
+      z-index: 10;
       &::before {
         font-family: $font-icomoon;
         opacity: 1;
@@ -4475,6 +4486,7 @@
     position: relative;
     &>.container-fluid {
       padding-right: 0;
+      padding-left: 0;
     }
     &::before {
       content: '';
@@ -4522,6 +4534,7 @@
   }
   &__block {
     position: relative;
+    overflow: hidden;
     a {
       text-decoration: none;
     }
@@ -4529,6 +4542,8 @@
       width: 280px;
       height: 280px;
       object-fit: contain;
+      transition: all 0.35s;
+      transform: scale(1);
     }
     &-title {
       position: absolute;
@@ -4548,6 +4563,11 @@
         right: 10px;
         font-family: $font-icomoon;
         font-size: rem(21px);
+      }
+    }
+    &:hover {
+      img {
+        transform: scale(1.2);
       }
     }
   }
