--- a/_gulp/_pug/_include/_footer.pug
+++ b/_gulp/_pug/_include/_footer.pug
@@ -21,13 +21,13 @@ footer.footer
       .footer__center
         .footer__social
           a(href="#!")
-            img(src="./images/icon-social-1.svg", alt="")
+            i.icon-viber
           a(href="#!")
-            img(src="./images/icon-social-2.svg", alt="")
+            i.icon-vkontakte
           a(href="#!")
-            img(src="./images/icon-social-3.svg", alt="")
+            i.icon-instagram
           a(href="#!")
-            img(src="./images/icon-social-4.svg", alt="")
+            i.icon-telegram
         .footer__phones
           a(href="tel:") 8 (499) 189-81-28
           a(href="tel:") 8 (499) 189-73-88
