--- a/_gulp/_pug/_include/_header.pug
+++ b/_gulp/_pug/_include/_header.pug
@@ -5,13 +5,13 @@ header.header
     .header__wrapper
       .header__social
         a(href="#!")
-          img(src="./images/icon-social-1.svg", alt="")
+          i.icon-viber
         a(href="#!")
-          img(src="./images/icon-social-2.svg", alt="")
+          i.icon-vkontakte
         a(href="#!")
-          img(src="./images/icon-social-3.svg", alt="")
+          i.icon-instagram
         a(href="#!")
-          img(src="./images/icon-social-4.svg", alt="")
+          i.icon-telegram
       .header__center
         .header__logo
           a(href="#!")
@@ -73,13 +73,13 @@ header.header
         .navigation__contacts
           .navigation__social
             a(href="#!")
-              img(src="./images/icon-social-1.svg", alt="")
+              i.icon-viber
             a(href="#!")
-              img(src="./images/icon-social-2.svg", alt="")
+              i.icon-vkontakte
             a(href="#!")
-              img(src="./images/icon-social-3.svg", alt="")
+              i.icon-instagram
             a(href="#!")
-              img(src="./images/icon-social-4.svg", alt="")
+              i.icon-telegram
           .navigation__phones
             div
               a(href="tel:") +7 499 189-73-88
