--- a/_gulp/_pug/about-us.pug
+++ b/_gulp/_pug/about-us.pug
@@ -82,9 +82,9 @@ html(lang="ru")
                 i.icon-arrow-right
               div
                 a(href="#!")
-                  img(src="./images/icon-social-3.svg", alt="")
+                  i.icon-instagram
                 a(href="#!")
-                  img(src="./images/icon-social-5.svg", alt="")
+                  i.icon-telegram
 
 
     include ./_include/_footer
