--- a/_gulp/_pug/contacts.pug
+++ b/_gulp/_pug/contacts.pug
@@ -55,15 +55,13 @@ html(lang="ru")
                 h2 Соцсети:
                 .social
                   a(href="#!")
-                    img(src="./images/icon-social-1.svg", alt="")
+                    i.icon-viber
                   a(href="#!")
-                    img(src="./images/icon-social-2.svg", alt="")
+                    i.icon-vkontakte
                   a(href="#!")
-                    img(src="./images/icon-social-3.svg", alt="")
+                    i.icon-instagram
                   a(href="#!")
-                    img(src="./images/icon-social-4.svg", alt="")
-                  a(href="#!")
-                    img(src="./images/icon-social-5.svg", alt="")
+                    i.icon-telegram
 
             .map
               #map.map__container
