--- a/_gulp/_scss/2-layout/_header.scss
+++ b/_gulp/_scss/2-layout/_header.scss
@@ -25,6 +25,23 @@
     a {
       display: inline-block;
       margin: 0 6px;
+      width: 38px;
+      height: 38px;
+      border-radius: 50%;
+      border: 1px solid #F9F2ED;
+      background-color: #F9F2ED;
+      text-decoration: none;
+      text-align: center;
+      color: #C69066;
+      position: relative;
+      transition: all 0.35s;
+      i {
+        font-size: rem(18px);
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+      }
     }
   }
   &__center {
@@ -199,6 +216,15 @@
     &__address {
       p {
         max-width: 75%;
+      }
+    }
+    &__social {
+      a {
+        &:hover {
+          background-color: #EDCFB8;
+          border-color: #EDCFB8;
+          color: $color-white;
+        }
       }
     }
     &.is-scroll {
