--- a/_gulp/_pug/_include/_head.pug
+++ b/_gulp/_pug/_include/_head.pug
@@ -34,6 +34,6 @@ head
     meta(name='theme-color' content='#ffffff')
 
   //- link(rel='stylesheet', href='css/fonts.min.css')
-  link(rel='stylesheet' href='https://i.icomoon.io/public/temp/b571260b10/visavi/style.css')
+  //- link(rel='stylesheet' href='https://i.icomoon.io/public/temp/b571260b10/visavi/style.css')
   link(rel='stylesheet', href='./css/style.min.css')
   
