--- a/_gulp/_scss/1-base/_font.scss
+++ b/_gulp/_scss/1-base/_font.scss
@@ -103,11 +103,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon/fonts/icomoon.eot?1iajmv');
-  src:  url('../fonts/icomoon/fonts/icomoon.eot?1iajmv#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon/fonts/icomoon.ttf?1iajmv') format('truetype'),
-    url('../fonts/icomoon/fonts/icomoon.woff?1iajmv') format('woff'),
-    url('../fonts/icomoon/fonts/icomoon.svg?1iajmv#icomoon') format('svg');
+  src:  url('../fonts/icomoon/fonts/icomoon.eot?i800da');
+  src:  url('../fonts/icomoon/fonts/icomoon.eot?i800da#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon/fonts/icomoon.ttf?i800da') format('truetype'),
+    url('../fonts/icomoon/fonts/icomoon.woff?i800da') format('woff'),
+    url('../fonts/icomoon/fonts/icomoon.svg?i800da#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -128,6 +128,24 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-instagram:before {
+  content: "\e917";
+}
+.icon-viber:before {
+  content: "\e918";
+}
+.icon-telegram:before {
+  content: "\e919";
+}
+.icon-vkontakte:before {
+  content: "\e91a";
+}
+.icon-arrow-left-4:before {
+  content: "\e91b";
+}
+.icon-arrow-right-4:before {
+  content: "\e91c";
+}
 .icon-arrow-right-3:before {
   content: "\e916";
 }
