--- a/_gulp/_pug/1-services-index-2.pug
+++ b/_gulp/_pug/1-services-index-2.pug
@@ -260,45 +260,189 @@ html(lang="ru")
                                 }
                               },
                               {
-                                title: 'Пн.',
+                                title: '1',
                                 attrs: {
-                                  value: 'Понедельник',
+                                  value: '1',
                                 }
                               },
                               {
-                                title: 'Вт.',
+                                title: '2',
                                 attrs: {
-                                  value: 'Вторник',
+                                  value: '2',
                                 }
                               },
                               {
-                                title: 'Ср.',
+                                title: '3',
                                 attrs: {
-                                  value: 'Среда',
+                                  value: '3',
                                 }
                               },
                               {
-                                title: 'Чт.',
+                                title: '4',
                                 attrs: {
-                                  value: 'Четверг',
+                                  value: '4',
                                 }
                               },
                               {
-                                title: 'Пт.',
+                                title: '5',
                                 attrs: {
-                                  value: 'Пятница',
+                                  value: '5',
                                 }
                               },
                               {
-                                title: 'Сб.',
+                                title: '6',
                                 attrs: {
-                                  value: 'Суббота',
+                                  value: '6',
                                 }
                               },
                               {
-                                title: 'Вс.',
+                                title: '7',
                                 attrs: {
-                                  value: 'Воскресенье',
+                                  value: '7',
+                                }
+                              },
+                              {
+                                title: '8',
+                                attrs: {
+                                  value: '8',
+                                }
+                              },
+                              {
+                                title: '9',
+                                attrs: {
+                                  value: '9',
+                                }
+                              },
+                              {
+                                title: '10',
+                                attrs: {
+                                  value: '10',
+                                }
+                              },
+                              {
+                                title: '11',
+                                attrs: {
+                                  value: '11',
+                                }
+                              },
+                              {
+                                title: '12',
+                                attrs: {
+                                  value: '12',
+                                }
+                              },
+                              {
+                                title: '13',
+                                attrs: {
+                                  value: '13',
+                                }
+                              },
+                              {
+                                title: '14',
+                                attrs: {
+                                  value: '14',
+                                }
+                              },
+                              {
+                                title: '15',
+                                attrs: {
+                                  value: '15',
+                                }
+                              },
+                              {
+                                title: '16',
+                                attrs: {
+                                  value: '16',
+                                }
+                              },
+                              {
+                                title: '17',
+                                attrs: {
+                                  value: '17',
+                                }
+                              },
+                              {
+                                title: '18',
+                                attrs: {
+                                  value: '18',
+                                }
+                              },
+                              {
+                                title: '19',
+                                attrs: {
+                                  value: '19',
+                                }
+                              },
+                              {
+                                title: '20',
+                                attrs: {
+                                  value: '20',
+                                }
+                              },
+                              {
+                                title: '21',
+                                attrs: {
+                                  value: '21',
+                                }
+                              },
+                              {
+                                title: '22',
+                                attrs: {
+                                  value: '22',
+                                }
+                              },
+                              {
+                                title: '23',
+                                attrs: {
+                                  value: '23',
+                                }
+                              },
+                              {
+                                title: '24',
+                                attrs: {
+                                  value: '24',
+                                }
+                              },
+                              {
+                                title: '25',
+                                attrs: {
+                                  value: '25',
+                                }
+                              },
+                              {
+                                title: '26',
+                                attrs: {
+                                  value: '26',
+                                }
+                              },
+                              {
+                                title: '27',
+                                attrs: {
+                                  value: '27',
+                                }
+                              },
+                              {
+                                title: '28',
+                                attrs: {
+                                  value: '28',
+                                }
+                              },
+                              {
+                                title: '29',
+                                attrs: {
+                                  value: '29',
+                                }
+                              },
+                              {
+                                title: '30',
+                                attrs: {
+                                  value: '30',
+                                }
+                              },
+                              {
+                                title: '31',
+                                attrs: {
+                                  value: '31',
                                 }
                               },
                             ]
