--- a/_gulp/_pug/about-us.pug
+++ b/_gulp/_pug/about-us.pug
@@ -44,25 +44,31 @@ html(lang="ru")
               p Мы предоставляем полный спектр услуг: от маникюра до лазерной шлифовки и всех видов массажа. Эстетическая, врачебная и аппаратная косметология дают возможность подчеркнуть достоинства и спрятать недостатки без хирургического вмешательства. Сейчас сфера косметологии так динамично развивается, что новое оборудование появляется каждый год. Мы пристально следим за новинками и используем только передовые технологии, чтобы процедуры в нашем салоне проходили максимально эффективно и безболезненно. 
 
             .about-us__gallery
-              .about-us__carousel
+              .about-us__carousel.gallery
                 div
                   .about-us__carousel-block
-                    img(src="./tmp/about-gallery-img-1.png", alt="").img-fluid
+                    a(href="./tmp/about-gallery-img-1.png").gallery-item
+                      img(src="./tmp/about-gallery-img-1.png", alt="").img-fluid
                 div
                   .about-us__carousel-block
-                    img(src="./tmp/about-gallery-img-2.png", alt="").img-fluid
+                    a(href="./tmp/about-gallery-img-2.png").gallery-item
+                      img(src="./tmp/about-gallery-img-2.png", alt="").img-fluid
                 div
                   .about-us__carousel-block
-                    img(src="./tmp/about-gallery-img-1.png", alt="").img-fluid
+                    a(href="./tmp/about-gallery-img-1.png").gallery-item
+                      img(src="./tmp/about-gallery-img-1.png", alt="").img-fluid
                 div
                   .about-us__carousel-block
-                    img(src="./tmp/about-gallery-img-2.png", alt="").img-fluid
+                    a(href="./tmp/about-gallery-img-2.png").gallery-item
+                      img(src="./tmp/about-gallery-img-2.png", alt="").img-fluid
                 div
                   .about-us__carousel-block
-                    img(src="./tmp/about-gallery-img-1.png", alt="").img-fluid
+                    a(href="./tmp/about-gallery-img-1.png").gallery-item
+                      img(src="./tmp/about-gallery-img-1.png", alt="").img-fluid
                 div
                   .about-us__carousel-block
-                    img(src="./tmp/about-gallery-img-2.png", alt="").img-fluid
+                    a(href="./tmp/about-gallery-img-2.png").gallery-item
+                      img(src="./tmp/about-gallery-img-2.png", alt="").img-fluid
             
             .about-us__info
               h2 Знаете, какую процедуру обожает Мадонна?
