--- a/_gulp/_pug/news.pug
+++ b/_gulp/_pug/news.pug
@@ -50,7 +50,7 @@ html(lang="ru")
                     p Если вы еще не знакомы с NASHI – это особенный момент. Время знакомиться.
                     a(href="#!").news__block-more
                       i.icon-arrow-right
-                .news__block.--left
+                .news__block.--center
                   .news__block-thumb
                     a(href="#!")
                       img(src="./tmp/content-thumb-img.png", alt="").img-fluid
@@ -70,7 +70,7 @@ html(lang="ru")
                     p Жаркое время года требует объемного внимания к коже и волосам. Именно потому, в салонах Визави появилась новая идеальная процедура для волос от легендарного итальянского бренда NASHI ARGAN.
                     a(href="#!").news__block-more
                       i.icon-arrow-right
-                .news__block.--right
+                .news__block.--center
                   .news__block-thumb
                     a(href="#!")
                       img(src="./tmp/content-thumb-img.png", alt="").img-fluid
